# propr-trading-agent

./: .clang-format  .clang-tidy  .dockerignore  .gitignore  CLAUDE.md  CMakeLists.txt  Dockerfile  Makefile  README.md  run-demo.sh  test-order.sh  vcpkg.json
app/: CMakeLists.txt  main.cpp
backtest/: CMakeLists.txt  fake_account.cpp  fake_account.h  historical_feeder.cpp  historical_feeder.h  main.cpp
config/: .env.example  runtime.yaml
docs/: demo-run-findings.md  demo-run-success.md  engineering-review.md  fixes-applied.md  runbook.md
include/propr/account/: account.h  challenge_rules.h  position.h
include/propr/app/: preflight.h  state_machine.h  trading_app.h
include/propr/config/: config.h
include/propr/core/: clock.h  decimal.h  event_bus.h  events.h  result.h  sha256.h  types.h  ulid.h
include/propr/exec/: order_executor.h  order_manager.h  propre_http_executor.h  reconciler.h
include/propr/log/: logger.h
include/propr/net/: http_client.h  hyperliquid_ws.h  propr_ws.h
include/propr/persist/: journal.h  schema.h
include/propr/risk/: kill_switch.h  leverage_cap.h  rate_limiter.h  risk_engine.h  sizing_policy.h
include/propr/schemas/: sign.h  v1.h
include/propr/sim/: exchange_simulator.h  sim_executor.h
include/propr/strategy/: market_snapshot.h  plugin_loader.h  strategy.h
src/account/: account.cpp  challenge_rules.cpp
src/app/: preflight.cpp  state_machine.cpp  trading_app.cpp
src/config/: config.cpp
src/core/: clock.cpp  decimal.cpp  sha256.cpp  ulid.cpp
src/exec/: order_manager.cpp  propre_http_executor.cpp  reconciler.cpp
src/log/: logger.cpp
src/net/: http_client.cpp  hyperliquid_ws.cpp  propr_ws.cpp
src/persist/: journal.cpp
src/risk/: kill_switch.cpp  rate_limiter.cpp  risk_engine.cpp  sizing_policy.cpp
src/schemas/: sign.cpp
src/sim/: exchange_simulator.cpp
src/strategy/: plugin_loader.cpp
strategies/range_mr/: CMakeLists.txt  params.yaml  range_mr.cpp
tests/: CMakeLists.txt
tests/fakes/: fake_clock.h  fake_http_client.h
tests/integration/: test_kill_switch_drill.cpp  test_simulator_drill.cpp
tests/unit/: test_account_equity.cpp  test_clock.cpp  test_decimal.cpp  test_invariants.cpp  test_journal_replay.cpp  test_kill_switch.cpp  test_preflight.cpp  test_rate_limiter.cpp  test_risk_engine.cpp  test_schemas_roundtrip.cpp  test_signed_command.cpp  test_sizing_policy.cpp  test_state_machine.cpp  test_ulid.cpp
